<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Iron Bank</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Iron Bank</string>
    <string name="digital_solution">Digital Solution</string>
    <string name="demo">Demo App</string>
    <string name="copyright">Iron Bank powered by Slang Labs</string>
    <string name="spinner_title">Select Category</string>
    <string name="account_number_text">Account Number</string>
    <string name="recent_date">09 Jan \'19</string>
    <string name="recent_info">UPI/123123123/Xyz7656546@A</string>
    <string name="recent_type">Dr</string>
    <string name="recent_amount">200.00</string>
    <string name="bank_balance">49268.91</string>
    <string name="account_number">1234567890</string>
    <string name="registered_address">Registered Address</string>
    <string name="submit">Submit</string>
    <string name="apply_for_cheque_book">Apply for Cheque Book</string>
    <string name="send">Send</string>
    <string name="to_text">To: help@bank.com</string>
    <string name="hint_feedback">Enter your feedback here</string>
    <string name="bills">Bills</string>
    <string name="customer_care">Customer Care</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="electricity">Electricity</string>
    <string name="postpaid">Postpaid</string>
    <string name="broadband">Broadband</string>
    <string name="water">Water</string>
    <string name="tax">Tax</string>
    <string name="add_biller">Add Biller</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="total_available_balance">Total Available Balance</string>
    <string name="inr">INR</string>
    <string name="transfer_to">Transfer to</string>
    <string name="transfer_type">Transfer Type</string>
    <string name="other_services">Other Services</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="amount">Amount</string>
    <string name="remarks">Remarks</string>
    <string name="imps_description">Up to INR 2 lakh trans. Real time. Works 24x7 and on holidays.</string>
    <string name="neft_description">Up to INR 10 lakh trans. Receiver gets money in 2 to 24 hours.</string>
    <string name="transfer">Transfer</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="from">From</string>
    <string name="available_balance">Available Balance</string>
    <string name="proceed">Proceed</string>
    <string name="_0_0">0.0</string>
    <string name="enter_remarks">Please enter remarks</string>
    <string name="payee_prompt">Enter Payee Name</string>
    <string name="imps">IMPS</string>
    <string name="neft">NEFT</string>
    <string name="biller_name">Biller Name</string>
    <string name="biller_select">Select Biller</string>
    <string name="consumer_number">Consumer Number</string>
    <string name="consumer_number_hint">10 digit Consumer number</string>
    <string name="from_which_account">Select account for paying</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="select_operator">Select Operator</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="broadband_number">Broadband Number</string>
    <string name="mobile_number_hint">Enter 10 digit mobile number</string>
    <string name="broadband_hint">Enter 11 digit broadband number</string>
    <string name="status_of_requests">Status of Requests</string>
    <string name="register_complaint">Register Complaint</string>
    <string name="complaints_management">Complaints Management</string>
    <string name="select_date">Select date</string>
    <string name="register_request">Register Request</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="email">Email</string>
    <string name="select_frequency">Select Frequency</string>
    <string name="select_dispatch_mode">Select Dispatch Mode</string>
    <string name="view_account_statement">View Account Statement</string>
    <string name="frequency">Frequency</string>
    <string name="statement_date">Statement Date</string>
    <string name="dispatch_mode">Dispatch Mode</string>
    <string name="period_question">For which period do you need a statement?</string>
    <string name="last_month">Last Month</string>
    <string name="last_3_months">Last 3 Months</string>
    <string name="choose_custom_date">Or use a custom date of your choice</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="pay_elec_bill">Pay Electricity Bill</string>
    <string name="pay_water_bill">Pay Water Bill</string>
    <string name="pay_post_bill">Pay Postpaid Bill</string>
    <string name="pay_broad_bill">Pay Broadband Bill</string>
    <string name="default_email">abc@email.com</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reg_address">Number 4, Privet Drive, Little Whinging, Surrey.</string>
    <string name="no_matching">Sorry no matching records found. Please choose another date range and try again</string>

    <string-array name="transfer_list">
        <item>Kumar</item>
        <item>Ved</item>
        <item>Vinayak</item>
        <item>Giri</item>
    </string-array>

    <string-array name="elec_list">
        <item>Tata Power</item>
        <item>BESCOM</item>
        <item>Reliance Power</item>
        <item>KESCO</item>
    </string-array>

    <string-array name="water_list">
        <item>State Water Corporation</item>
    </string-array>

    <string-array name="postpaid_list">
        <item>BSNL</item>
        <item>Jio</item>
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>Idea</item>
    </string-array>

    <string-array name="broadband_list">
        <item>BSNL</item>
        <item>Jio</item>
        <item>Airtel</item>
        <item>MTNL</item>
    </string-array>

    <string-array name="account_number">
        <item>Account-1234567890</item>
    </string-array>

    <string-array name="frequency_list">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="dispatch_list">
        <item>Email</item>
        <item>Post</item>
    </string-array>

</resources>
