<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="12dp"
    android:background="#515151"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biller_name"
        android:textColor="@color/light_font"
        android:textSize="15sp"/>
    <Spinner
        android:id="@+id/electricity_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:prompt="@string/biller_select"
        android:backgroundTint="@color/white"
        android:spinnerMode="dialog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/consumer_number"
        android:textColor="@color/light_font"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/electricity_cn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/light_font"
        android:textColor="@color/white"
        android:hint="@string/consumer_number_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        android:textColor="@color/light_font"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/electricity_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textSize="28sp"
        android:textColorHint="@color/light_font"
        android:textColor="@color/white"
        android:inputType="numberDecimal"
        android:hint="@string/_0_0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from_which_account"
        android:textColor="@color/light_font"
        android:textSize="15sp"/>
    <Spinner
        android:id="@+id/electricity_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:entries="@array/account_number"/>

    <Button
        android:id="@+id/electricity_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:enabled="false"
        android:background="@drawable/grid5"
        android:padding="4dp"
        android:textColor="@color/warm_grey"
        android:text="@string/pay_bill"/>

</LinearLayout>