<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#515151"
    tools:context="in.slanglabs.bankingapp.AccountStatement">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="10dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_number_text"
                    android:textColor="@color/slang_lib_light_font"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/vs_account_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/account_number"
                    android:textColor="@color/slang_lib_white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vs_total_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_available_balance"
                    android:textColor="@color/slang_lib_light_font" />

                <TextView
                    android:id="@+id/vs_inr"
                    android:layout_below="@+id/vs_total_balance"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inr"
                    android:textColor="@color/slang_lib_light_font"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/vs_balance_amount"
                    android:layout_toRightOf="@+id/vs_inr"
                    android:layout_marginLeft="4dp"
                    android:layout_alignBaseline="@+id/vs_inr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_balance"
                    android:textStyle="bold"
                    android:textColor="@color/slang_lib_white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingBottom="4dp"
                android:textColor="@color/slang_lib_light_font"
                android:text="@string/period_question"/>
            <RadioGroup
                android:id="@+id/vs_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/vs_last_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/slang_lib_white"
                    android:buttonTint="#ec8a00"
                    android:text="@string/last_month"/>
                <RadioButton
                    android:id="@+id/vs_last_three_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:textColor="@color/slang_lib_white"
                    android:buttonTint="#ec8a00"
                    android:text="@string/last_3_months"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/slang_lib_light_font"
                android:text="@string/choose_custom_date"
                android:paddingLeft="8dp"
                android:paddingBottom="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <EditText
                    android:id="@+id/vs_start"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="14sp"
                    android:backgroundTint="@color/slang_lib_white"
                    android:hint="@string/start_date"
                    android:textColorHint="@color/slang_lib_white"
                    android:textColor="@color/slang_lib_white"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/vs_end"
                    android:layout_width="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="14sp"
                    android:backgroundTint="@color/slang_lib_white"
                    android:hint="@string/end_date"
                    android:textColorHint="@color/slang_lib_white"
                    android:textColor="@color/slang_lib_white"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vs_proceed"
            android:enabled="false"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:background="@drawable/grid5"
            android:textColor="@color/slang_lib_white"
            android:text="@string/proceed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/vs_linear_layout_transactions">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/vs_view_transactions_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/no_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            android:textColor="@color/slang_lib_white"
            android:text="@string/no_matching"/>

    </LinearLayout>
</ScrollView>