<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:orientation="vertical"
        android:layout_weight="3">
        <TextView
            android:id="@+id/recent_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/slang_lib_white"
            android:text="@string/recent_date"/>
        <TextView
            android:id="@+id/recent_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_info"
            android:textColor="@color/slang_lib_white60"
            android:layout_marginTop="4dp"
            android:textSize="12sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <TextView
            android:id="@+id/recent_type"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/recent_type"
            android:textColor="@color/slang_lib_white"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/recent_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/recent_type"
            android:layout_toLeftOf="@+id/recent_type"
            android:layout_marginRight="8dp"
            android:textSize="20sp"
            android:text="@string/recent_amount"
            android:textColor="@color/slang_lib_white"/>
    </RelativeLayout>
</LinearLayout>