<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".slang.OrderCheque">
    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:text="@string/account_number_text"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_number"/>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/communication_address"/>
    <EditText
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/submit_button_cheque"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"/>
</LinearLayout>