<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="#515151"
    tools:context="in.slanglabs.bankingapp.CustomerCare">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_text"
        android:textColor="@color/slang_lib_white60"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <EditText
            android:id="@+id/editTextFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/slang_lib_white"
            android:hint="@string/hint_feedback"
            android:textSize="16sp" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:singleLine="true"
        android:background="@drawable/grid5"
        android:textColor="@color/slang_lib_white"
        android:text="@string/send" />
</LinearLayout>